--- a/Clima/Base.lproj/Main.storyboard
+++ b/Clima/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,105 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Clima" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fondo2" translatesAutoresizingMaskIntoConstraints="NO" id="1Zc-sc-MV9">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CfX-L1-LeX">
+                                <rect key="frame" x="30" y="20" width="315" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFB-bF-aRY">
+                                        <rect key="frame" x="0.0" y="10" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="GTi-Jv-KWP"/>
+                                            <constraint firstAttribute="height" constant="40" id="HJ0-y1-hRc"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="localitation"/>
+                                        <connections>
+                                            <action selector="LocalizacionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bIi-co-IAa"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IFB-av-BX7">
+                                        <rect key="frame" x="60" y="13" width="195" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="search"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mWq-Uh-3mf">
+                                        <rect key="frame" x="275" y="10" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Pry-cP-aYn"/>
+                                            <constraint firstAttribute="height" constant="40" id="RI3-BM-Vnl"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="search"/>
+                                        <connections>
+                                            <action selector="BuscarButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cs0-ar-wuB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="XiP-34-DYI"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Qja-jL-hd7">
+                                <rect key="frame" x="30" y="90" width="345" height="128"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wUy-0B-bB9">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="128"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="JcW-9Y-xrS">
+                                        <rect key="frame" x="130" y="35" width="215" height="58"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperatura" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffG-bs-47p">
+                                                <rect key="frame" x="0.0" y="0.0" width="97.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ciudad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EzE-Bo-svh">
+                                                <rect key="frame" x="0.0" y="37.5" width="54.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Qja-jL-hd7" firstAttribute="top" secondItem="CfX-L1-LeX" secondAttribute="bottom" constant="10" id="CMM-VX-z7Y"/>
+                            <constraint firstItem="CfX-L1-LeX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="E2p-kg-xqi"/>
+                            <constraint firstItem="Qja-jL-hd7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="JZJ-zP-BPM"/>
+                            <constraint firstItem="1Zc-sc-MV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OWk-F9-0ou"/>
+                            <constraint firstItem="CfX-L1-LeX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="Pa3-qV-SFT"/>
+                            <constraint firstItem="1Zc-sc-MV9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ReY-dI-POY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qja-jL-hd7" secondAttribute="trailing" id="Tzw-Z0-AqG"/>
+                            <constraint firstItem="1Zc-sc-MV9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ioa-91-P8R"/>
+                            <constraint firstItem="1Zc-sc-MV9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mZq-2R-Ppg"/>
+                            <constraint firstAttribute="trailing" secondItem="CfX-L1-LeX" secondAttribute="trailing" constant="30" id="sWc-Yh-3a5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="buscarTextField" destination="IFB-av-BX7" id="TWb-EA-Ooa"/>
+                        <outlet property="ciudadLabel" destination="EzE-Bo-svh" id="Y0u-69-H3U"/>
+                        <outlet property="climaImageView" destination="wUy-0B-bB9" id="yDc-pz-lGQ"/>
+                        <outlet property="temperaturaLabel" destination="ffG-bs-47p" id="wFF-B2-l9V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fondo2" width="320" height="480"/>
+        <image name="localitation" width="113.5" height="160"/>
+        <image name="search" width="186" height="186"/>
+    </resources>
 </document>
