--- a/Clima/Base.lproj/Main.storyboard
+++ b/Clima/Base.lproj/Main.storyboard
@@ -19,21 +19,20 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CfX-L1-LeX">
-                                <rect key="frame" x="30" y="20" width="315" height="60"/>
+                                <rect key="frame" x="30" y="40" width="315" height="60"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFB-bF-aRY">
-                                        <rect key="frame" x="0.0" y="10" width="40" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="60"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="GTi-Jv-KWP"/>
-                                            <constraint firstAttribute="height" constant="40" id="HJ0-y1-hRc"/>
+                                            <constraint firstAttribute="width" constant="42" id="jh2-oa-Gu5"/>
                                         </constraints>
-                                        <state key="normal" title="Button" image="localitation"/>
+                                        <state key="normal" image="localitation"/>
                                         <connections>
                                             <action selector="LocalizacionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bIi-co-IAa"/>
                                         </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Escribe una ciudad" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IFB-av-BX7">
-                                        <rect key="frame" x="60" y="13" width="255" height="34"/>
+                                        <rect key="frame" x="62" y="13" width="253" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="search"/>
                                     </textField>
@@ -43,7 +42,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Qja-jL-hd7">
-                                <rect key="frame" x="30" y="90" width="345" height="162.5"/>
+                                <rect key="frame" x="30" y="110" width="345" height="162.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="iec-67-fHK">
                                         <rect key="frame" x="0.0" y="18.5" width="132.5" height="125.5"/>
@@ -118,7 +117,7 @@
                             <constraint firstItem="CfX-L1-LeX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="E2p-kg-xqi"/>
                             <constraint firstItem="Qja-jL-hd7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="JZJ-zP-BPM"/>
                             <constraint firstItem="1Zc-sc-MV9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OWk-F9-0ou"/>
-                            <constraint firstItem="CfX-L1-LeX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="Pa3-qV-SFT"/>
+                            <constraint firstItem="CfX-L1-LeX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="40" id="Pa3-qV-SFT"/>
                             <constraint firstItem="1Zc-sc-MV9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ReY-dI-POY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qja-jL-hd7" secondAttribute="trailing" id="Tzw-Z0-AqG"/>
                             <constraint firstItem="1Zc-sc-MV9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ioa-91-P8R"/>
